--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <noscript>
-      JavaScript muss aktiviert sein, um W&ouml;rtchen spielen zu k&ouml;nnen.
+      You need to enable JavaScript.
     </noscript>
     <div id="root"></div>
     <!--
