--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Wörtchen - Wordle auf Deutsch" />
+    <meta name="description" content="Pördl - Wordle auf Deutsch" />
     <!--
 		manifest.json provides metadata used when your web app is installed on a
 		user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -43,7 +43,15 @@
 		work correctly both with client-side routing and a non-root public URL.
 		Learn how to configure a non-root public URL by running `npm run build`.
 		-->
-    <title>Wörtchen - Wordle auf Deutsch</title>
+    <title>Pördl - Wordle auf Deutsch</title>
+    <% if (process.env.NODE_ENV === 'production' && process.env.REACT_APP_PLAUSIBLE_DOMAIN != null) { %>
+      <!-- Plausible Analytics -->
+      <% if (process.env.REACT_APP_PLAUSIBLE_HOST != null) { %>
+        <script defer data-domain="%REACT_APP_PLAUSIBLE_DOMAIN%" src="%REACT_APP_PLAUSIBLE_HOST%/js/plausible.js"></script>
+      <% } else { %>
+        <script defer data-domain="%REACT_APP_PLAUSIBLE_DOMAIN%" src="https://plausible.io/js/plausible.js"></script>
+      <% } %>
+    <% } %>
   </head>
   <body>
     <noscript>
